syntax = "proto3";

option go_package = "./;pb";

// designed to be shared between all app protocols
message Messagedata {
    // shared between all requests
    int64 timestamp = 1;     // unix time
    string id = 2;           // allows requesters to use request data when processing a response
}

//// Tag protocol

// a protocol define a set of reuqest and responses
message TagRequest {
    Messagedata MessageData = 1;
    string FileName   = 2;
    string CustomData = 3;
    int64  BlockNum   = 4;
}
message TagResponse {
    Messagedata MessageData = 1;
    // Code indicates the result of this transfer
    uint32 Code = 2;
}

//// Mus protocol

// a protocol define a set of reuqest and responses
message MusRequest {
    Messagedata MessageData = 1;
}
message MusResponse {
    Messagedata MessageData = 1;
    // Code indicates the result of this transfer
    uint32 Code = 2;
}

//// file protocol

// a protocol define a set of reuqest and responses
message FileRequest {
    Messagedata MessageData = 1;
    string FileName = 2;
    uint64 FileSize = 3;
    uint32 FileType = 4;
    uint32 DataLength = 5;
    bytes  Data = 6;
}
message FileResponse {
    Messagedata MessageData = 1;
    // Code indicates the result of this transfer
    uint32 Code = 2;
}

//// idle protocol

// a protocol define a set of reuqest and responses
message idleRequest {
    uint64 PeerIndex = 1;
    bytes Sign = 2;
}
message IdleResponse {
    uint32 Code = 2;
}